# Mechanistic-Analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
authority_analysis/: __init__.py  activation_logger.py  behavior_classifier.py  behavior_evaluator.py  causal_intervention.py  config.py  constants.py  feature_analyzer.py  metrics_reporter.py  model_interface.py  pipeline.py  posthoc_analysis.py  prompt_generator.py  sae_module.py  schemas.py  utils.py
configs/: example_experiment.yaml  gemma2_2b.yaml  llama3_robustness_base.yaml  llama3_spec_example.yaml  llama3_strong_placebo_classifier.yaml  mistral_v03.yaml  phi3_medium.yaml  phi3_mini.yaml  qwen25_14b.yaml  qwen25_7b.yaml
data/: semantic_requests.jsonl  semantic_requests.jsonl.sha256
scripts/: aggregate_external_replay.py  aggregate_layer_alpha_sweep.py  aggregate_seed_results.py  analyze_calibration_sweep.py  analyze_features.py  analyze_gemma_sign_reversal.py  analyze_layer_alpha_robustness.py  analyze_layer_readout_coupling.py  analyze_layer_transfer.py  analyze_projection_specificity.py  bootstrap_cloud_workspace.sh  build_expanded_dataset.py  build_final_analysis_package.py  build_full_paper_package.py  build_semantic_requests_dataset.py  compute_probe_validation.py  evaluate_behavior.py  generate_paper_stats.py  generate_prompts.py  generate_qualitative_examples.py  posthoc_margin_analysis.py  reclassify_behavioral_gt.py  replay_cue_sensitivity.py  run_adaptive_alpha.py  run_cloud_campaign.py  run_experiment.py  run_experiment_resume.py  run_frozen_direction_replay.py  run_intervention.py  (+12 more)
(+35 files in other folders)
